# contoso_university

./: pyproject.toml
app/: main.py  models.py  schemas.py  seed.py
app/routers/: course.py  department.py  enrollment.py  instructor.py  office.py  student.py
